--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Wenrong Sun"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : "Senior student at The Hong Kong University of Science and Technology"
   location         : "Hong Kong"
   employer         :
